# weath3rb0i

./: .gitignore  Cargo.toml  README.md  brute.py  run.py  run.sh  x.py
.github/workflows/: rust.yml
docs/: hashslots.md
docs/state_table/: aux_state_table.csv  state_table.csv
src/: arithmetic_coder.rs  bit_helpers.rs  bit_io.rs  hashmap.rs  helpers.rs  history.rs  lib.rs  macros.rs  main.rs  mixer.rs  range_coder.rs  runner.rs  smart_context.rs  state_table.rs
src/analyzers/: alphabet_reordering.rs  mod.rs
src/counters/: bit_counter.rs  mod.rs  record_keeper.rs
src/entropy_coders/: ac32.rs  ac48.rs  ac64.rs  ac_io.rs  mod.rs
src/entropy_coding/: ac_io.rs  arithmetic_coder.rs  arithmetic_coder_tests.rs  huffman.rs  io.rs  mod.rs  package_merge.rs  prefix_codes.rs  tests.rs
src/history/: ac_history.rs  ac_history_cached.rs  ac_rev_history.rs  ac_rev_history_cached.rs  huff_history.rs  mod.rs  raw_history.rs
src/mixers/: interpolated2.rs  mod.rs  opinion_mixer2.rs
src/models/: counter.rs  frozen.rs  m16unaligned.rs  mod.rs  nib_tree.rs  order0.rs  order0entropy.rs  order0tiny.rs  order1.rs  order1entropy.rs  ordern.rs  ordern_entropy.rs  record_model.rs  static_order0.rs  tiny_order0.rs
src/models/ac_hash/: mod.rs  ordern.rs  stationary.rs  stationary_book1.rs  stationary_enwik7.rs
src/models/stationary/: mod.rs
src/state_table/: mod.rs  naive.rs
