[package]
name = "weath3rb0i"
version = "0.1.0"
edition = "2021"
authors = ["Dimitar Rusev <mitikodev@gmail.com>"]
description = "CM text compressor"
repository = "https://github.com/mitiko/weath3rb0i/"
license = "GPL-3.0"
keywords = ["compressor", "context_mixing"]
categories = ["compression"]

[dependencies]
debug_unreachable = "0.1"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
