[package]
name = "weath3rb0i"
version = "0.1.0"
edition = "2021"
authors = ["Dimitar Rusev <mitikodev@gmail.com>"]
description = "CM text compressor"
repository = "https://github.com/mitiko/weath3rb0i/"
license = "GPL-3.0"
keywords = ["compressor", "context_mixing"]
categories = ["compression"]

default-run = "weath3rb0i"

[dependencies]
rayon = "1.9.0" # MT only used for search, compression is single threaded
serde_json = "1.0.140"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[features]
default = []
unsafe_conversions = []

[[bin]]
name = "order0"
[[bin]]
name = "ac-over-huffman"
[[bin]]
name = "cmp"
[[bin]]
name = "ordern"
[[bin]]
name = "entropy-hashing-ac"
[[bin]]
name = "entropy-hashing-ac-cached"
[[bin]]
name = "entropy-hashing-huff"
